# ml-template-torch

./: .gitignore  .pre-commit-config.yaml  .spellignore  LICENSE  README.md  dataset.py  evaluation.py  experiments.py  inference.py  main.py  model.py  plotting.py  pyproject.toml  requirements.txt  train.py  utils.py
.github/: dependabot.yaml
.github/workflows/: run-quality-check.yml  run-tests.yml
datasets/: mock_dataset.csv
modelname/: __init__.py  __main__.py  dataset.py  evaluation.py  experiments.py  inference.py  model.py  plotting.py  train.py  utils.py
models/: default_model_name_params.json  mock_model.json  mock_model_experiment_params.json
models/default_model_name/: fold0.pth  fold1.pth  fold2.pth  fold3.pth  fold4.pth
models/mock_model_experiment/: fold0.pth  fold1.pth  fold2.pth  fold3.pth  fold4.pth
results/: mock_model_experiment_results.csv  mock_result.csv
tests/: __init__.py  conftest.py  test_modelname.py
